workable bookstore app

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,5 +3,5 @@
 {% block head_title %}About Us{% endblock %}
 
 {% block content %}
-    <p>This is more about stuff {{ title }}</p>
+    <p> About Us </p>
 {% endblock %}
