--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-    <h1>At Home</h1>
-    
+<h1>Title: {{ book.name }}</h1>
+
+<p><strong>Author:</strong> <a href="{% url 'author:author_detail' book.author.slug %}">{{ book.author }}</a></p>
+<p><strong>ISBN:</strong> {{ book.isbn }}</p> 
+<p><strong>Publisher:</strong> <a href="{% url 'publisher:publisher_detail' book.publisher.slug %}">{{ book.publisher }}</a></p>
+
+
 {% endblock %}
