--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -2,6 +2,21 @@
 
 {% block content %}
 
-    <h1>At Home</h1>
+    <h1>List of Book</h1>
+
+    {% if book_list %}
+    <ul>
+
+      {% for book in book_list %}
+      <li>
+        <a href="{{ book.get_absolute_url }}">{{ book.name }}</a> |  ({{book.author}})
+      </li>
+      {% endfor %}
+
+    </ul>
+
+    {% else %}
+      <p>There are no books in the library.</p>
+    {% endif %} 
     
 {% endblock %}
