--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,18 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Book store</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Book store</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+
       <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="{% url 'book:book_list' %}">Book</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blog">Blog</a>
+        <a class="nav-link" href="{% url 'publisher:publisher_list' %}">Publisher</a>
       </li>
-      
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'author:author_list' %}">Author</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="{% url 'about' %}">About</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="{% url 'contact_us' %}">Contact us</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action='/search/'>
       <input class="form-control mr-sm-2" type="search" name='q' placeholder="Search" aria-label="Search">
