--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,13 +8,13 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'book:book_list' %}">Book</a>
+        <a class="nav-link" href="{% url 'book:book_list' %}">Books</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'publisher:publisher_list' %}">Publisher</a>
+        <a class="nav-link" href="{% url 'publisher:publisher_list' %}">Publishers</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'author:author_list' %}">Author</a>
+        <a class="nav-link" href="{% url 'author:author_list' %}">Authors</a>
       </li>
             <li class="nav-item">
         <a class="nav-link" href="{% url 'about' %}">About</a>
