--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -2,11 +2,17 @@
 
 {% block content %}
 
-<h1>Title: {{ book.name }}</h1>
+<h1>{{ book.name }}</h1> <h2><a href="{{ book.get_update_url }}">Update</a></h2>
+
+
+<a href="#">Add cost </a>
 
 <p><strong>Author:</strong> <a href="{% url 'author:author_detail' book.author.slug %}">{{ book.author }}</a></p>
 <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
 <p><strong>Publisher:</strong> <a href="{% url 'publisher:publisher_detail' book.publisher.slug %}">{{ book.publisher }}</a></p>
 
+<p><strong>Summary:</strong> {{ book.summary }}</p> 
+<p><strong>Language:</strong> {{ book.language }}</p> 
+<p><strong>Genre:</strong> {{ book.genre }}</p> 
 
 {% endblock %}
