--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -2,14 +2,17 @@
 
 {% block content %}
 
-    <h1>List of Book</h1>
+    <h1>List of Books</h1>
+
+<a href="{% url 'book:book_create' %}">Add new book</a>
+
 
     {% if book_list %}
     <ul>
 
       {% for book in book_list %}
       <li>
-        <a href="{{ book.get_absolute_url }}">{{ book.name }}</a> |  ({{book.author}})
+        <a href="{{ book.get_absolute_url }}">{{ book.name }}</a> |  ({{book.author}}) | <a href="{{ book.get_update_url }}">Update</a> | <a href="{% url 'book:book_delete' book.slug %}">Delete</a> 
       </li>
       {% endfor %}
 
