--- a/templates/author/author_list.html
+++ b/templates/author/author_list.html
@@ -16,7 +16,7 @@
     </ul>
 
     {% else %}
-      <p>There are no books authors</p>
+      <p>There are no authors</p>
     {% endif %} 
     
 {% endblock %}
