--- a/templates/author/author_detail.html
+++ b/templates/author/author_detail.html
@@ -4,6 +4,8 @@
 
 <h1>Author: {{ author.name }}</h1>
 
+<h1>{{ author.name }}</h1> <h2><a href="{{ author.get_update_url }}">Update</a></h2>
+
 <p><strong>Country:</strong> {{ author.country }}</p> 
 
 {% endblock %}
