--- a/templates/country/country_list.html
+++ b/templates/country/country_list.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 
-<h1>List of Publishers</h1>
+<h1>List of Countries</h1>
 
-<a href="{% url 'publisher:publisher_create' %}">Add new publisher</a><br>  ||  
+<a href="{% url 'publisher:publisher_create' %}">Add new publisher</a> ||  
 <a href="{% url 'publisher:country_list' %}">Country list</a> |  <a href="{% url 'publisher:country_create' %}">Add Country</a> || 
 <a href="{% url 'publisher:state_list' %}">State list</a>  |  <a href="{% url 'publisher:state_create' %}">Add state</a> || 
 <a href="{% url 'publisher:district_list' %}">District list</a> |<a href="{% url 'publisher:district_create' %}">Add District</a> <br>
 
-    {% if publisher_list %}
+    {% if country_list %}
     <ul>
 
-      {% for publisher in publisher_list %}
+      {% for country in country_list %}
       <li>
-        <a href="{{ publisher.get_absolute_url }}">{{ publisher.name }}</a> | <a href="{{ publisher.get_update_url }}">Update</a> | <a href="{% url 'publisher:publisher_delete' publisher.slug %}">Delete</a> 
+        <a href="{{ country.get_absolute_url }}">{{ country.name }}</a> | <a href="{{ country.get_update_url }}">Update</a> | <a href="{% url 'publisher:country_delete' country.slug %}">Delete</a> 
       </li>
       {% endfor %}
 
