--- a/templates/author/author_detail.html
+++ b/templates/author/author_detail.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 
-<h1>Author: {{ author.name }}</h1>
-
-<h1>{{ author.name }}</h1> <h2><a href="{{ author.get_update_url }}">Update</a></h2>
+<h1>Author: {{ author.name }} <a class= "btn btn-primary" href="{{ author.get_update_url }}">Update</a></h1>
 
 <p><strong>Country:</strong> {{ author.country }}</p> 
 
