--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -15,9 +15,11 @@
 
       {% for book in book_list %}
       <li>
-        <a href="{{ book.get_absolute_url }}">{{ book.name }}</a> |  ({{book.author}}) | <a href="{{ book.get_update_url }}">Update</a> | <a href="{% url 'book:book_delete' book.slug %}">Delete</a> 
+        <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> | {% for author in book.author.all %}
+ <a href="{% url 'author:author_detail' author.slug %}">{{ author }}</a>,
+{% endfor %}  | <a href="{{ book.get_update_url }}">Update</a> | <a href="{% url 'book:book_delete' book.slug %}">Delete</a> 
       </li>
-      {% endfor %}
+      {% endfor %}</p>
 
     </ul>
 
